<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ImageView
       android:id="@+id/judul"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginTop="60dp"
       android:contentDescription="@string/app_name"
       android:src="@drawable/judul"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />



   <LinearLayout
       android:id="@+id/linearLayout"
       android:layout_width="86dp"
       android:layout_height="0dp"
       app:layout_constraintBottom_toTopOf="@id/btn_reset"
       android:orientation="vertical"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/judul">

      <TextView
          android:id="@+id/player1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:text="@string/player1"
          android:textStyle="bold"
          android:textColor="@color/blue"
          android:textSize="20sp" />

      <ImageView
          android:id="@+id/batup1"
          style="@style/image"
          android:src="@drawable/batu"
          android:contentDescription="@string/batu" />

      <ImageView
          android:id="@+id/guntingp1"
          style="@style/image"
          android:src="@drawable/gunting"
          android:contentDescription="@string/gunting" />

      <ImageView
          android:id="@+id/kertasp1"
          style="@style/image"
          android:src="@drawable/kertas"
          android:contentDescription="@string/kertas" />
   </LinearLayout>




   <LinearLayout
       android:id="@+id/com"
       android:layout_width="86dp"
       android:layout_height="0dp"
       android:orientation="vertical"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/btn_reset"
       app:layout_constraintTop_toBottomOf="@+id/judul">

      <TextView
          android:id="@+id/tv_com"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:textStyle="bold"
          android:textColor="@color/blue"
          android:text="@string/com"
          android:textSize="20sp" />

      <ImageView
          android:id="@+id/batuCom"
          style="@style/image"
          android:src="@drawable/batu"
          android:contentDescription="@string/batu" />

      <ImageView
          android:id="@+id/guntingCom"
          style="@style/image"
          android:src="@drawable/gunting"
          android:contentDescription="@string/gunting"
          />

      <ImageView
          android:id="@+id/kertasCom"
          style="@style/image"
          android:src="@drawable/kertas"
          android:contentDescription="@string/kertas" />
   </LinearLayout>

   <TextView
       android:id="@+id/tv_VS"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:rotation="-8"
       android:text="@string/vs"
       android:textColor="@color/red"
       android:textSize="30sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toStartOf="@+id/com"
       app:layout_constraintStart_toEndOf="@+id/linearLayout"
       app:layout_constraintTop_toBottomOf="@+id/judul"
       app:layout_constraintBottom_toBottomOf="@id/linearLayout"
       />

   <Button
       android:id="@+id/btn_reset"
       android:src="@drawable/refresh"
       android:layout_width="60dp"
       android:layout_height="60dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="20dp"
       android:backgroundTint="@color/white"
       android:background="@drawable/refresh"

       />


</androidx.constraintlayout.widget.ConstraintLayout>

